--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "engines": {
+    "node": ">= 16.0.0",
+    "npm": ">= 8.0.0"
   }
 }
